--- a/Nivel0-A/Guia/guia.tex
+++ b/Nivel0-A/Guia/guia.tex
@@ -11,25 +11,25 @@
 \titlepage
 
 \chapter{Introducción}
-Existen en la actualidad distintas formas de acceder a productos de origen satelital. Es posible obtener resultados que varían desde imágenes en crudo hasta mapas de propiedades y usos del suelo.
+Existen en la actualidad distintas formas de acceder a productos de origen satelital. Es posible obtener resultados que varían desde imágenes en crudo, hasta mapas de propiedades y usos del suelo.
 
-En los últimos años, además de las formas tradicionales de procesamiento de imágenes, donde un usuario debía descargar un producto y luego manipularlo, comenzaron a aparecer soluciones web, permitiendo el acceso a un amplio abanico de productos, independientemente de su nivel de conocimiento. Entre ellas se destacan el \href{https://explorer.earthengine.google.com/#workspace}{EarthEngine} de Google, el \href{http://landsatexplorer.esri.com/}{LandsatExplorer} de ESRI, el \href{http://apps.sentinel-hub.com/eo-browser/}{EO Browser} de Sentinel-hub y el \href{lv.eosda.com}{Land Viewer} de EOS.
+En los últimos años, además de las formas tradicionales de procesamiento de imágenes, donde un usuario debía descargar un producto y luego manipularlo, comenzaron a aparecer soluciones web, permitiendo el acceso a un amplio abanico de propuestass, independientemente de su nivel de conocimiento. Entre ellas se destacan el \href{https://explorer.earthengine.google.com/#workspace}{EarthEngine} de Google, el \href{http://landsatexplorer.esri.com/}{LandsatExplorer} de ESRI, el \href{http://apps.sentinel-hub.com/eo-browser/}{EO Browser} de Sentinel-hub y el \href{lv.eosda.com}{Land Viewer} de EOS.
 
-No obstante esta posibilidad, es importante disponer de capacitaciones que permitan mejorar el uso de las herramientas. Este taller pretende incorporar los conocimientos básicos de teledetección óptica en interpretación visual, para que los usuarios sin conocimientos previos, puedan acercarce al manejo de productos satelitales de forma clara y sencilla.
+No obstante, es importante disponer de capacitaciones que permitan mejorar el uso de las herramientas. Este taller pretende incorporar los conocimientos básicos de teledetección óptica en interpretación visual, para que los usuarios sin conocimientos previos, puedan acercarce al manejo de productos satelitales de forma clara y sencilla.
 
-Se trabajará con la aplicación Land Viewer, con el objetivo de analizar los efectos producidos por el incendio en las cercanías de Carlos Paz, provincia de Córdoba en septiembre de 2017.
+Se trabajará con la aplicación Land Viewer, con el objetivo de analizar los efectos producidos por el incendio en las cercanías de Carlos Paz, provincia de Córdoba, en septiembre de 2017.
 
 \chapter{Land Viewer}
 
-LandView es un servicio web de la empresa Earth Observing System, el cual permite explorar, visualizar y descargar, de forma gratuita, hasta 10 imagenes por día de sensores que incluyen la serie \href{https://landsat.usgs.gov/}{Landsat}, \href{https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table/mcd43a4}{MODIS} y \href{https://sentinel.esa.int/web/sentinel/missions/sentinel-2}{Sentinel 2} .
+LandView es un servicio web de la empresa Earth Observing System, el cual permite explorar, visualizar y descargar de forma gratuita, hasta 10 imagenes por día de sensores que incluyen la serie \href{https://landsat.usgs.gov/}{Landsat}, \href{https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table/mcd43a4}{MODIS} y \href{https://sentinel.esa.int/web/sentinel/missions/sentinel-2}{Sentinel 2} .
 
 \section{Registro}
 Para acceder al servicio de LandView debe dirigirse a \url{https://lv.eosda.com} y registrarse
 
 \section{Interface gráfica}
 
-Una vez que ingresa, accederá a un mapa  similar al de Google Maps (Figura \ref{fig:main}).
-Destacamos en el tres partes:
+Una vez que ingresa, accederá a un mapa  similar al de Google Maps.
+Destacamos en él tres partes (Figura \ref{fig:main}):
 
 \begin{figure}[h!]
     \centering
@@ -39,16 +39,14 @@ Destacamos en el tres partes:
 \end{figure}
 
 \begin{itemize}
-    \item La parte superior que nos permite buscar en el mundo (en verde).
-    \item La parte izquierda que nos permite hacer zoom en el mapa, marcar zonas de interés, realizar mediciones y agregar distintas capas como puede ser un mapa de alturas, una imagen satelital de base o un mapa político (en rojo).
-    \item La parte derecha donde podemos elegir distintos productos satelitales, mostrarlos, realizar combinaciones de bandas y guardar los datos obtenidos (en azul).
+    \item Sector de busqueda (en verde).
+    \item Herramientas de zoom en el mapa, marcación de zonas de interés,  mediciones e incorporación de capas como ser un mapa de alturas, una imagen satelital de base o un mapa político (en rojo).
+    \item Selección de productos satelitales, formas de mostrarlos, realizar combinaciones de bandas y guardar los datos obtenidos (en azul).
 \end{itemize}
-
-Podemos ver tambien la latitud y longitud de cualquier punto posicionandonos sobre el y observando el valor en la parte inferior de la pantalla.
 
 \section{Mediciones}
 
-En el mapa, busque la ciudad de Villa Carlos Paz. Podrá ver sus coordenadas en el margen inferior izquierdo. Utilice la herramienta \emph{Medir distancias} \includegraphics[scale=0.2]{in:medir.png} la distancia entre Córdoba Capital y Villa Carlos Paz (Figura \ref{fig:distancia}). Para realizaro, haga un click en el sitiode inicio y otro en el lugar de finalización.
+En el mapa, busque la ciudad de Villa Carlos Paz. Podrá ver sus coordenadas en el margen inferior izquierdo. Utilice la herramienta \emph{Medir distancias} \includegraphics[scale=0.2]{in:medir.png} para calcular la distancia entre Córdoba Capital y Villa Carlos Paz (Figura \ref{fig:distancia}). Para realizaro, haga un click en el sitiode inicio y otro en el lugar de finalización.
 
 \begin{figure}[!h]
     \centering
@@ -76,16 +74,11 @@ Puede medir un área cerrando el polígono sobre el punto inicial.
 \end{que}
 
 \begin{que}
-    ¿Cuales son las coordenadas de las ciudades de Córdoba Capital, Villa Carlos Paz, Rio Cuarto y Villa Maria?
+    ¿Cuáles son las coordenadas de las ciudades de Córdoba Capital, Villa Carlos Paz, Río Cuarto y Villa María?
 \end{que}
 
-
-
-
 \chapter{Resolución espacial y temporal}
-Dos características fundamenteles de las imágenes satelitales son la resolución espacial y la resolución temporal. La primera da una idea de que objetos podemos distinguir en el terreno. Por ejemplo, una resolución espacial de $30m$ nos permitirá distinguir una plaza de una manzana construida, pero no las casas dentro de una manzana.
-
-La resolución temporal indica la la duración del fenomeno ma chico que se puede detectar. Por ejemplo, una resolución temporal de $15$ días posibilita estudiar como cambia la vegetación a lo largo de las estaciones, pero no la variación de nubes a lo largo del día.
+Dos características fundamenteles de las imágenes satelitales son la resolución espacial y la resolución temporal. La primera, da una idea de los objetos que podemos distinguir en el terreno; por ejemplo, una resolución espacial de $30m$ nos permitirá distinguir una plaza de una manzana construida, pero no las casas dentro de una manzana. La resolución temporal indica la la duración del fenomeno ma chico que se puede detectar; por ejemplo, una resolución temporal de $15$ días posibilita estudiar el cambio de vegetación a lo largo de las estaciones, pero no la variación de nubes a lo largo del día.
 
 \begin{figure}[h!]
     \centering
@@ -94,25 +87,22 @@ La resolución temporal indica la la duración del fenomeno ma chico que se pued
     \label{fig:evst}
 \end{figure}
 
-
-Ambas resoluciones suelen estar relacionadas (Figura \ref{fig:evst}), de forma  tal que al aumentar una disminuye la otra. Por ejemplo: GOES, un satélite meteorológico, tiene alta revisita temporal (aproximadamente de 15 minutos), mientras que su resolución espacial es baja (4km). En el otro extremo, SPOT 7 tiene una alta resolución espacial, de hasta $1.5$m, pero con una revisita temporal del orden del mes.
+Ambas resoluciones suelen estar relacionadas de forma  tal que al aumentar una disminuye la otra (Figura \ref{fig:evst}). Por ejemplo: GOES, un satélite meteorológico, tiene alta revisita temporal (aproximadamente de 15 minutos), mientras que su resolución espacial es baja (4km). En el otro extremo, SPOT 7 tiene una alta resolución espacial, de hasta 1.5m, pero con una revisita temporal del orden del mes.
 
 Es importante destacar que no existen mejores o peores imágenes, sino que su elección dependerá del objeto de estudio.
 
 \section{Imágenes satelitales}
-Para seleccionar una imagen es necesario definir un area de interes (AOI), la herramienta \emph{Draw rectangular} \includegraphics[scale=0.2]{in:draw.png}
-En este caso dibuje un rectanglo que incluya la zona entre el Lago San Roque y Córdoba (Figura \ref{fig:aoi}) y seleccione el satélite Landsat 8 desde \includegraphics[scale=0.2]{in:sat.png}.
-
-A continuación, en el margen derecho, aparecerán todas las escena disponibles.
+Para seleccionar una imagen es necesario definir un área de interés (AOI) con la herramienta \emph{Draw rectangular} \includegraphics[scale=0.2]{in:draw.png}.
+En este caso, dibuje un rectanglo que incluya la zona entre el Lago San Roque y Córdoba (Figura \ref{fig:aoi}) y seleccione el satélite Landsat 8 desde \includegraphics[scale=0.2]{in:sat.png}. A continuación, en el margen derecho, aparecerán todas las escena disponibles.
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.75\textwidth]{fig:aoi.png}
-    \caption{Gráfico de un área de interes (AOI) para seleccionar la zona en la que se seleccionaran las imagenes.}
+    \caption{Gráfico de un área de interes (AOI).}
     \label{fig:aoi}
 \end{figure}
 
- Por defecto, Land Viewer muestra solo aquellas escenas que poseen una cobertura nubosa de hasta un 60\% (Figura \ref{fig:nube}) y de los últimos 3 meses (Figura \ref{fig:fecha}). Es posible cambiarlo haciendo click en la parte superior del Scene Search.  Modifique la cobertura nubosa al 100\%.
+ Por defecto, Land Viewer muestra solo aquellas escenas que poseen una cobertura nubosa de hasta un 60\% y de los últimos 3 meses (Figuras \ref{fig:nube} y \ref{fig:fecha}). Es posible cambiarlo haciendo click en la parte superior del Scene Search.  Modifique la cobertura nubosa al 100\%.
 
 \begin{figure}[h!]
     \centering
@@ -133,36 +123,26 @@ Elija la imagen del 2 de Septiembre de 2017 (Figura \ref{fig:scene}) y se mostra
 
 \begin{figure}[hb!]
 \centering
-\begin{minipage}{.425\linewidth}
-  \includegraphics[width=\linewidth]{fig:sat.png}
-\end{minipage}
-\hspace{.05\linewidth}
-\begin{minipage}{.425\linewidth}
-  \includegraphics[width=\linewidth]{fig:imagen1.png}
-\end{minipage}
+  \includegraphics[width=0.5\textwidth]{fig:imagen1.png}
 \caption{Selección de satélite e imágenes en Land Viewer.}
 \label{fig:scene}
 \end{figure}
 
-La imagen pertenece al sensor OLI del satelite Landsat 8, con una resolución espacial de $30m$, por lo tanto, solo podrá distinguir objetos de tamaño mayor como manzanas o parques, pero no más chicos.
+La imagen pertenece al sensor OLI del satelite Landsat 8, con una resolución espacial de $30m$, por lo tanto, solo podrá distinguir objetos de tamaño mayor, como manzanas o parques, pero no más pequeños.
 
-Vuelva a la lista de satélite y seleccione el producto MODIS MCD43A4, ahora encontrará una imagen por día. Seleccione la correspondiente al 27 de Agosto de 2017.
+Vuelva a la lista de satélite y elija el producto MODIS MCD43A4, ahora dispondrá de una imagen por día. Seleccione la correspondiente al 27 de Agosto de 2017.
 
-Observe que no es posible distinguir las manzanas de la ciudad de Córdoba como en el caso anterior. La imagen elegida pertenece al producto \emph{MCD43A4} generado a partir del sensor MODIS de los satélites AQUA y TERRA. Con una resolución espacial entre los 250m y los 1000m, según como mostremos la imagen.
+Observe que no es posible distinguir las manzanas de la ciudad de Córdoba como en el caso anterior. La imagen pertenece al producto \emph{MCD43A4} generado a partir del sensor MODIS de los satélites AQUA y TERRA, con una resolución espacial de 500m.
 
 \section{Comparación entre fechas}
 Realice la comparación entre una imagen anterior y una porsterior al incendio, correspondientes a la misma época, en años consecutivos. Para ello, seleccione el satélite Sentinel 2 y elija la imagen del 21 de Agosto de 2017. Haga click en \emph{Comparison slider} \includegraphics[scale=0.2]{in:LR.png} y seleccione la imagen del 23 de Agosto de 2016, modificando la fecha en el calendario.
 
-Puede cambiar la posición de las imágenes a izquierda o la derecha con el botón L/R.
-
-\begin{center}\includegraphics[scale=0.4]{in:LorR.png}\end{center}
-
-Desplace el slider a ambos lados y visualice la zona cercana al Lago San Roque (Figura \ref{fig:slider}).
+Puede cambiar la posición de las imágenes a izquierda o la derecha con el botón L/R (Figura \ref{fig:slider} - en verde). Desplace el slider a ambos lados y visualice la zona cercana al Lago San Roque.
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.75\textwidth]{fig:slider.png}
-    \caption{Dos imágenes en pantalla, separadas por el slider que permite cambiar entre las dos zonas.}
+    \caption{Dos imágenes en pantalla, separadas por el slider.}
     \label{fig:slider}
 \end{figure}
 
@@ -185,9 +165,9 @@ Desplace el slider a ambos lados y visualice la zona cercana al Lago San Roque (
 
 \chapter{Combinaciones espectrales}
 
-Hasta ahora ha trabajado con imágenes cuya combinación de colores resulta intuitiva, pero no permite distinguir claramente las zonas incendeadas. Para mejorar esta situación se utilizaran zonas del espectro electromagnetico que normalmente no pueden ser distinguidas por el ojo humano, pero sí por el sensor.
-Los satélite miden la cantida de luz que proviene de la superficie terrestre. Las distintas coberturas como vegetación, agua y suelo sin cobertura vegetal tienen comportamientos característico dentro del espectro, las cuales pueden ser utilizados para extraer información sobre ellos (Figura \ref{fig:spec}).
+Hasta ahora ha trabajado con imágenes cuya combinación de colores resulta intuitiva, pero no permite distinguir claramente las zonas incendiadas. Para mejorar esta situación se utilizaran zonas del espectro electromagnetico que normalmente no pueden ser distinguídas por el ojo humano, pero sí por el sensor.
 
+Los satélite miden la cantidad de luz que proviene de la superficie terrestre. Las distintas coberturas como vegetación, agua y suelo sin cobertura vegetal tienen un comportamiento característico dentro del espectro, que puede ser utilizado para extraer información sobre ellos (Figura \ref{fig:spec}).
 
 
 \begin{figure}[h!]
@@ -198,11 +178,9 @@ Los satélite miden la cantida de luz que proviene de la superficie terrestre. L
 \end{figure}
 
 
-\section{Combinaciones RGB}
+\section{Combinaciones espectrales}
 
-Las combinaciones RGB permiten mostrar en color azul, verde y rojo la información de cada longitud de onda.
-
-En Land Viewer, puede modificarlo haciendo click en BAND COMBINATIONS (Figura \ref{fig:bandas}).
+Las combinaciones espectrales muestran en color azul, verde y rojo la información de cada longitud de onda. En Land Viewer, puede modificarlo haciendo click en BAND COMBINATIONS (Figura \ref{fig:bandas}).
 
 \begin{figure}[h!]
     \centering
@@ -213,6 +191,8 @@ En Land Viewer, puede modificarlo haciendo click en BAND COMBINATIONS (Figura \r
 
 Las combinaciones espectrales permiten mostrar distinta información (Tabla \ref{tab:ce}).
 
+En nuestro caso particular, la combinación espectral que mejor separa las zonas incenciadas de las no incendiadas es la \emph{Short wave infrared}, donde se muestra en rojo los sitios que se incendiaron recientemente y en verde las zonas con vegetación. Seleccione esa combinación y compare ambas imágenes. (Figura \ref{fig:incendio}).
+
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.75\textwidth]{fig:incendio.png}
@@ -220,7 +200,6 @@ Las combinaciones espectrales permiten mostrar distinta información (Tabla \ref
     \label{fig:incendio}
 \end{figure}
 
-En nuestro caso particular, la combinación espectral que mejor separa las zonas incenciadas de las no incendiadas es la \emph{Short wave infrared}, donde se muestra en rojo las zonas que se incendiaron recientemente y en verde las zonas con vegetación. Seleccione la combinación en Land Viewer y compare ambas imágenes. (Figura \ref{fig:incendio}).
 
 \pagebreak
 \hspace{0pt}
@@ -230,15 +209,15 @@ En nuestro caso particular, la combinación espectral que mejor separa las zonas
         \toprule
         \multicolumn{2}{c}{Combinaciones espectrales}\\
         \midrule\\
-        Color real (\emph{Natural color - rojo, verde, azul}): Muestra la imagen de forma similar a como la verían nuestros ojos. La vegetación se ve verde, los suelos en distintos tonos de marrón, las ciudades en blanco y los cuerpos de agua se observan en colores oscuros. &
+        Color real (\emph{Natural color - rojo, verde, azul}): Muestra la imagen de forma similar a como la verían nuestros ojos. La vegetación se ve verde, los suelos en distintos tonos de marrón, las ciudades en blanco y los cuerpos de agua en colores oscuros. &
         \begin{minipage}{.4\textwidth} \includegraphics[width=\linewidth]{4-3-2.jpeg}
         \end{minipage}\\
         &\\
-        Falso color (\emph{False color (urban) - SWIR2, SWIR1, Rojo}): Proporciona una interpretación similar a la observada por el ojo humano, sin tener en cuenta la incidencia de la atmosfera. La vegetación se visualiza en verde, las zonas urbanas en blanco y ciam, los suelos en una variedad de colores y las zonas con agua se notan en azul o negro. &
+        Falso color (\emph{False color (urban) - SWIR2, SWIR1, Rojo}): Proporciona una interpretación similar a la observada por el ojo humano, sin tener en cuenta la incidencia de la atmósfera. La vegetación se visualiza en verde, las zonas urbanas en blanco y ciam, los suelos en una variedad de colores y las zonas con agua se notan en azul o negro. &
         \begin{minipage}{.4\textwidth} \includegraphics[width=\linewidth]{12-11-4.jpeg}
         \end{minipage}\\
         &\\
-        Infrarrojo color (\emph{Color infrared (vegetation) - NIR, Rojo, Verde}): La combinación de color hsbitual para separar vegetación de otras coberturas. Aquí la vegetación suele verse en color rojo brillante, las ciudades y suelos sin cobertura en tonos de cian y las zonas con agua se ven en negro. &
+        Infrarrojo color (\emph{Color infrared (vegetation) - NIR, Rojo, Verde}): La combinación de color habitual para separar vegetación de otras coberturas. Aquí la vegetación suele verse en color rojo brillante, las ciudades y suelos sin cobertura en tonos de cian y las zonas con agua en negro. &
         \begin{minipage}{.4\textwidth} \includegraphics[width=\linewidth]{8-4-3.jpeg}
         \end{minipage}\\
         &\\
@@ -259,7 +238,7 @@ Puede descargar la imagen generada haciendo click en ESCENE DOWNLOAD, elija la o
 \section{Actividades}
 
 \begin{que}
-    ¿Cuál es la superficie incendiada al oeste del Lago San Roque?
+    ¿Cuál es la superficie incendiada al este del Lago San Roque?
 \end{que}
 
 \begin{que}
@@ -284,17 +263,16 @@ Puede descargar la imagen generada haciendo click en ESCENE DOWNLOAD, elija la o
 
 \chapter{Cierre}
 
-En este taller se mostró como utilizar las herramientas de LandView junto con algunos conceptos basicos de teledetección, para interpretar imágenes.
+En este taller se mostró como utilizar las herramientas de Land Viewer junto con algunos conceptos básicos de teledetección, para la interpretación de imágenes.
 
 Aprendimos que hay 3 características fundamentales de un conjunto satélite/sensor para el uso de productos geoespaciales
 
 \begin{itemize}
-    \item Resolución espacial: capacidad de distinguir un objetos en el terreno.
+    \item Resolución espacial: capacidad de diferenciar objetos en el terreno.
     \item Resolución temporal: cada cuanto tiempo se tiene una imagen de la misma zona.
-    \item Resolución espectral: csntidad de zonas del espectro que se pueden distinguir.
+    \item Resolución espectral: cantidad de zonas del espectro que se pueden distinguir.
 \end{itemize}
 
 Esta es una primera aproximación al trabajo en teledetección, donde la interpretación visual se combina con el procesamiento digital para extraer información sobre la superficie terrestre.
-
 
 \end{document}
