Agregamos a Laura Rouco como autora de la guia

--- a/Nivel0-A/Guia/guia.tex
+++ b/Nivel0-A/Guia/guia.tex
@@ -5,7 +5,7 @@
 \graphicspath{{./figs/}}
 
 \title{{\large Nivel 0} \\ Interpretación visual de imágenes satelitales}
-\author{Marina Compagnucci \and Francisco Nemiña}
+\author{Marina Compagnucci \and Francisco Nemiña \and Laura Rouco}
 \begin{document}
 \maketitle
 \titlepage
