--- a/Nivel2-B/Documentos/Guia/guia2.tex
+++ b/Nivel2-B/Documentos/Guia/guia2.tex
@@ -1,4 +1,4 @@
-\chapter{SNAP}
+\chapter{Interpretación visual}
 
 Esta clase tiene como objetivo familiarizarnos con la interpretación visual de imágenes SAR en las bandas L, C y X. Para esto se estudiaran las interacciones con distintos blancos para cada una de las bandas.
 
@@ -10,10 +10,10 @@ Las imágenes adquiridas en \emph{Banda X} son las que tienen menor longitud de 
     \centering
     %\includegraphics{fig:bandaX}
     \caption{Interacciónes con distintos blancos: -a- superficial, -b- subsuperficial, -c- doble rebote y -d- en volumen.}
-    \label{bandaX}
+    \label{fig:bandaX}
 \end{figure}
 
-Abra la imagen \path{CSKS3_GEC_B_S2_03_HH_RD_SF_20141221211655_20141221211703.h5} de la carpeta \path{material/raster_data/COSMO}. Despliege la banda \emph{Sigma\_HH_db}.
+Abra la imagen \path{CSKS3_GEC_B_S2_03_HH_RD_SF_20141221211655_20141221211703.h5} de la carpeta \path{material/raster_data/COSMO}. Despliege la banda \path{Sigma_HH_db}.
 
 Observe guiandose con el mapa de la zona (Figura \ref{fig:mapa})
 \begin{itemize}
@@ -50,10 +50,10 @@ Las imágenes adquiridas en \emph{Banda C} son las que tienen longitudes de onda
     \centering
     %\includegraphics{fig:bandaL}
     \caption{Interacciónes con distintos blancos: -a- superficial, -b- subsuperficial, -c- doble rebote y -d- en volumen.}
-    \label{bandaC}
+    \label{fig:bandaC}
 \end{figure}
 
-Abra la imagen \path{SENTINEL} de la carpeta \path{material/raster_data/SENTINEL1}. Despliege la banda \emph{Sigma\_HH_db}.
+Abra la imagen \path{SENTINEL} de la carpeta \path{material/raster_data/SENTINEL1}. Despliege la banda \path{Sigma_HH_db}.
 
 Observe guiandose con el mapa de la zona (Figura \ref{fig:mapa})
 \begin{itemize}
@@ -68,10 +68,10 @@ Las imágenes adquiridas en \emph{Banda L} son las que tienen mayor longitud de 
     \centering
     %\includegraphics{fig:bandaL}
     \caption{Interacciónes con distintos blancos: -a- superficial, -b- subsuperficial, -c- doble rebote y -d- en volumen.}
-    \label{bandaL}
+    \label{fig:bandaL}
 \end{figure}
 
-Abra la imagen \path{ALOS} de la carpeta \path{material/raster_data/ALOS}. Despliege la banda \emph{Sigma\_HH_db}.
+Abra la imagen \path{ALOS} de la carpeta \path{material/raster_data/ALOS}. Despliege la banda \path{Sigma_HH_db}.
 
 Observe guiandose con el mapa de la zona (Figura \ref{fig:mapa})
 \begin{itemize}
