Corregimos las imagenes a utilizar

--- a/Nivel2-B/Documentos/Guia/guia1.tex
+++ b/Nivel2-B/Documentos/Guia/guia1.tex
@@ -15,7 +15,7 @@ Descomprima los archivos decargados que se denominan \path{material.tar.gz}. Abr
 
 \section{Apertura de imágenes}
 
-En el menú principal, seleccione \emph{Open product...} y dentro de la carpeta \path{material/raster_data}, seleccione \path{S2A_MSIL2A_20170720.dim}.
+En el menú principal, seleccione \emph{Open product...} y dentro de la carpeta \path{material/raster_data}, seleccione \path{S2A_USER_MTD_SAFL2A_PDMC_20161206.dim}.
 
 Haga doble click sobre el nombre de la imgen y se desplegará un árbol que incluye las siguientes opciones:
 \dirtree{%
@@ -110,7 +110,7 @@ Para abrir la imagen en otro software de GIS o exportar una imagen jpg ingrese a
 
 \section{Actividad}
 
-Abrá la imagen \path{S1B_GRDH_20170727.dimg} de la  carpeta \path{material/raster_data}. Abra la banda \path{Sigma0_VH}.
+Abrá la imagen que se encuentra en la carpeta la  carpeta \path{material/raster_data/COSMO}. Abra la banda \path{Sigma0_VH}.
 
 \begin{que}
     ¿A que coberturas dentro de la imagen pertenecen las regiones de la imagen con mayor nivel de brillo?
