--- a/Nivel2-B/Documentos/Guia/guia1.tex
+++ b/Nivel2-B/Documentos/Guia/guia1.tex
@@ -1,23 +1,24 @@
 \chapter{SNAP}
 
-Esta clase tiene como objetivo familiarizarse con el entorno gráfico del \emph{Sentinel Aplication Toolbox (SNAP)}. El SNAP es el software de procesamiento de imágenes diseñado por la \emph{Agencia Espacial Europera (ESA)}. Este tiene distintas herramientas que simplifican el trabajo con imágenes radar y ópticas, además de la realización de procesamiento de imágenes en general.
+El \emph{Sentinel Aplication Toolbox (SNAP)} es un  software de procesamiento de imágenes diseñado por la \emph{Agencia Espacial Europera (ESA)}, cuyas herramientas simplifican el trabajo con imágenes radar y ópticas.
+Esta clase tirno vomo objetivo familiarizarce con el entorno gráfico del programa.
 
 \section{Interfaz gráfica del SNAP}
 
-Descomprima los archivos decargados que se denominan \path{material.tar.gz}. Abra el programa SNAP, allí encontrará la interfaz gráfica del usuario (Figura \ref{fig:int})
+Descomprima los archivos decargados denominanados \path{material.tar.gz}. Abra el programa SNAP, allí encontrará la interfaz gráfica del usuario (Figura \ref{fig:int})
 
 \begin{figure}[h!]
     \centering
     \includegraphics[scale=1.1]{fig:int.png}
-    \caption{Interfáz gráfica del usuario. El \emph{Producto Explorer} y el área de visualización del programa.}
+    \caption{Interfáz gráfica del usuario. El area de visualización con el \emph{Producto Explorer} a la izquierda.}
     \label{fig:int}
 \end{figure}
 
 \section{Apertura de imágenes}
 
-En el menú principal, seleccione \emph{Open product...} y dentro de la carpeta \path{material/raster_data}, seleccione \path{S2A_USER_MTD_SAFL2A_PDMC_20161206.dim}.
+En el menú principal, seleccione \emph{Open product...} y dentro de la carpeta \path{material/raster_data}, elija \path{S2A_USER_MTD_SAFL2A_PDMC_20161206.dim}.
 
-Haga doble click sobre el nombre de la imgen y se desplegará un árbol que incluye las siguientes opciones:
+Haga doble click sobre el nombre de la imgen y se desplegará, en el \emph{Producto Explorer} un árbol que incluye las siguientes opciones:
 \dirtree{%
     .1 [1] S2\_MSIL2A\_20170702.
     .2 Metadata.
@@ -40,7 +41,7 @@ En esta cobertura encontramos
 
 \section{Visualización}
 
-Para visualizar una de las bandas de la imagen haciendo doble click sobre ella. La banda se mostrará en escala de grises (Figura \ref{fig:mono})
+Para visualizar una de las bandas de la imagen haga doble click sobre el nombre y se mostrará en escala de grises (Figura \ref{fig:mono}). Es posible abrir varias bandas en simultaneo, cada una se mostrará en una pestaña nueva arriba del área de visualización. Explore la imagen utilizando las herramientas de navegación y zoom (Figura \ref{fig:NAV})
 
 \begin{figure}[h!]
     \centering
@@ -49,9 +50,7 @@ Para visualizar una de las bandas de la imagen haciendo doble click sobre ella. 
     \label{fig:mono}
 \end{figure}
 
-Es posible abrir varias bandas en simultaneo, cada una de ella se mostrará en una pestaña nueva arriba del área de visualización.
 
-Explore la imagen utilizando las herramientas de navegación y zoom (Figura \ref{fig:NAV})
 
 \begin{figure}[h!]
     \centering
@@ -60,16 +59,16 @@ Explore la imagen utilizando las herramientas de navegación y zoom (Figura \ref
     \label{fig:NAV}
 \end{figure}
 
-En el \emph{Product Explorer} haga click derecho sobre el nombre y seleccione \emph{Open RGB image windows}. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas.
+En el \emph{Product Explorer} haga click derecho sobre el nombre y seleccione \emph{Open RGB image windows}. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Por defecto aparecerá la combinación que utiliza las bandas 4, 3 y 2 de Sentinel 2, desplieguela haciendo click en OK (Figura \ref{fig:RVA}).
 
 \begin{figure}[h!]
     \centering
     \includegraphics[scale=0.7]{fig:RGB.png}
-    \caption{Ventana de combinación de bandas. Puede eligir una banda para cada canal del monitor ()\emph{Red, Green, Blue}) o puede optarpor una preseleccionada del menú \emph{Profile}}
+    \caption{Ventana de combinación de bandas. Puede eligir una banda para cada canal del monitor (\emph{Red, Green, Blue}) o puede optarpor una preseleccionada del menú \emph{Profile}}
     \label{fig:RGB}
 \end{figure}
 
-Por defecto elegirá, para la imagen seleccionada, la combinación que utiliza las bandas 4, 3 y 2 de Sentinel 2 y la desplegará haciendo click en OK (Figura \ref{fig:RVA}).
+
 
 \begin{figure}[h!]
     \centering
@@ -81,7 +80,7 @@ Por defecto elegirá, para la imagen seleccionada, la combinación que utiliza l
 
 \section{Consulta de píxel}
 
-Haciendo click en la pestaña \emph{Pixel info}, junto al \emph{Product explorer}, es posible obtener la información sobre un píxel para todas las bandas que se encuentren abiertas. Para utilizarla haga click en ella y posicionese sobre un píxel en la imagen (Figura \ref{fig:pixel}).
+Para obtener información sobre un pixel posicionese sobre uno en la imagen y seleccione la pestaña \emph{Pixel info}, junto al \emph{Product explorer} (Figura \ref{fig:pixel}).
 
 \begin{figure}[h!]
     \centering
@@ -90,34 +89,30 @@ Haciendo click en la pestaña \emph{Pixel info}, junto al \emph{Product explorer
     \label{fig:pixel}
 \end{figure}
 
-Obsevará información que incluye el píxel en el que se encuentra, la latitud y longitud del píxel, las coordenadas dentro del mapa y el valor de la bandas que se encuentren abiertas.
+Allí encontrará la latitud y longitud, las coordenadas dentro del mapa y el valor del pixel en la banda abierta.
 
 \section{Exportar pantalla}
 
-Es posible exportar la visualización de la pantalla del SNAP para ser abierta en distintos software.
-
-En el caso de querer abrirla imagen en Google Earth ingrese al menú \emph{File, Export, Other, View as KMZ}. Seleccione donde quiere guardar el archivo y obtendrá un archivo \path{.kmz}.
-
-Para abrir la imagen en otro software de GIS o exportar una imagen jpg ingrese al menú \emph{File, Export, Other, View}. En este caso deberá seleccionar el tipo de archivo en \emph{File of type}. En caso de querer mantener la georreferencia debe seleccionar el tipo \emph{GeoTIFF - TIFF with geo-location} (Figura \ref{fig:export}). Conviene elegir en este caso elegir la opción \emph{Full resolution} para mantener la resolución original de la imagen.
+Es posible exportar la visualización de la imagen completa o de una región específica desde \emph{File, Export view}. Si selecciona \emph{View as KMZ} obtendrá un archivo \path{.kmz} que luego podrá abrir desde Google Earth; o elegir \emph{View as image} generando archivos \path{.GeoTiff o .JPG} para visualizarlo en otro software. Para mantener la georreferencia debe optar por \emph{GeoTIFF - TIFF with geo-location} con la opción \emph{Full resolution}. De esta manera sse mantiene la resolucion original de la imagen.(Figura \ref{fig:export}).
 .
 
 \begin{figure}[h!]
     \centering
     \includegraphics{fig:export.png}
-    \caption{Menu para exportar vista como archivo. Incluye las opciones para elegir el recorte, la resolución y el tipo de dato de saalida.}
+    \caption{Menu de Export image. Incluye las opciones para elegir el recorte, la resolución y el tipo de dato de salida.}
     \label{fig:export}
 \end{figure}
 
 \section{Actividad}
 
-Abrá la imagen que se encuentra en la carpeta la  carpeta \path{material/raster_data/COSMO}. Abra la banda \path{Sigma0_VH}.
+Abra la imagen que se encuentra en la carpeta \path{material/raster_data/COSMO}. Abra la banda \path{Sigma0_VH}.
 
 \begin{que}
-    ¿A que coberturas dentro de la imagen pertenecen las regiones de la imagen con mayor nivel de brillo?
+    ¿A qué coberturas pertenecen las regiones de la imagen con mayor nivel de brillo?
 \end{que}
 
 \begin{que}
-    ¿Como es el valor de brillo para las zonas de cuerpos de agua?
+    ¿Cómo es el valor de brillo para los cuerpos de agua?
 \end{que}
 
 \begin{que}
