Agregamos las figuras de la guia2.

--- a/Nivel2-B/Documentos/Guia/guia1.tex
+++ b/Nivel2-B/Documentos/Guia/guia1.tex
@@ -98,7 +98,7 @@ Es posible exportar la visualización de la imagen completa o de una región esp
 
 \begin{figure}[h!]
     \centering
-    \includegraphics{fig:export.png}
+    \includegraphics[width=0.7\textwidth]{fig:export.png}
     \caption{Menu de Export image. Incluye las opciones para elegir el recorte, la resolución y el tipo de dato de salida.}
     \label{fig:export}
 \end{figure}
