--- a/Nivel2-B/Documentos/Guia/guia2.tex
+++ b/Nivel2-B/Documentos/Guia/guia2.tex
@@ -8,7 +8,7 @@ Para las imágenes radar hay 3 grandes grupos de interacciones posibles entre el
 
 \begin{figure}[h!]
     \centering
-    %\includegraphics{fig:bandaL}
+    \includegraphics[width=0.5\textwidth]{fig:interacciones.png}
     \caption{Interacciónes con distintos blancos: -a- superficial, -b- subsuperficial, -c- doble rebote y -d- en volumen.}
     \label{fig:interacciones}
 \end{figure}
@@ -76,7 +76,7 @@ Observe guiandose con la imagen óptica:
 
 \section{Valores de $dB$}
 
-Es habitual expresar el valor del coeficiente de backscatter en dB para las imágenes SAR. Para calcularlo en distintos sectores de la imagen puede posicionarse sobre un píxel y observar en \emph{Pixel info} el valor de \emph{Sigma0_HH_db} en dB.
+Es habitual expresar el valor del coeficiente de backscatter en dB para las imágenes SAR. Para calcularlo en distintos sectores de la imagen puede posicionarse sobre un píxel y observar en \emph{Pixel info} el valor de \path{Sigma0_HH_db} en dB.
 
 Observe guiandose con la imagen óptica para la imagen \path{COSMO}:
 
@@ -92,7 +92,7 @@ Otra forma de obtener estos valores es calculando el promedio sobre una región.
 
 \begin{figure}[h!]
     \centering
-    %\includegraphics{fig:vector-cont.png}
+    \includegraphics[scale=0.4]{fig:vector-cont.png}
     \caption{}
     \label{fig:vector-cont}
 \end{figure}
@@ -103,7 +103,7 @@ Dirijase luego al menú \emph{Analysis, Statistics} y en la ventana que aparece 
 
 \begin{figure}[h!]
     \centering
-    %\includegraphics{fig:estadistica.png}
+    \includegraphics[scale=0.4]{fig:estadistica.png}
     \caption{}
     \label{fig:estadistica}
 \end{figure}
