--- a/Nivel2-B/Documentos/Guia/preamble.tex
+++ b/Nivel2-B/Documentos/Guia/preamble.tex
@@ -54,6 +54,9 @@
 % Pagina en blanco cuando ha
 \usepackage{emptypage}
 
+% Subfiguras
+\usepackage{subfig}
+
 \definecolor{A11}{HTML}{B2DF8A}
 \definecolor{A12}{HTML}{33A02C}
 \definecolor{A23}{HTML}{FDBF6F}
